# SIMD-Spielman-for-ZKPs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Readme.md  run_bench.py  run_tests.py  run_throughput_epyc.py
bench/: SpielmanExtensionMT_Bench.cpp  SpielmanExtension_Bench.cpp  SpielmanMersenneMT_Bench.cpp  SpielmanMersenne_Bench.cpp  SpielmanMontgomeryMT_Bench.cpp  SpielmanMontgomeryVerif_Bench.cpp  SpielmanMontgomery_Bench.cpp
fields/: ExtUnpackedExtensionField.h  ExtUnpackedMersennePrimeField.h  ExtUnpackedMontgomeryPrimeField.h  ExtUnpackedMontgomeryPrimeFieldVerif.h  ExtensionField.h  MersennePrimeField.h  MontgomeryPrimeField.h  MontgomeryPrimeFieldVerif.h  UnpackedExtensionField.h  UnpackedMersennePrimeField.h  UnpackedMontgomeryPrimeField.h  UnpackedMontgomeryPrimeFieldVerif.h
fields/tests/: ExtensionField_Test.cpp  MersennePrimeField_Test.cpp  MontgomeryPrimeFieldVerif_Test.cpp  MontgomeryPrimeField_Test.cpp
spielman/: ExpanderGraph.h  ExpanderGraphMT.h  SpielmanCode.h  SpielmanCodeMT.h  SpielmanParams.h
spielman/tests/: SpielmanExtensionMT_Test.cpp  SpielmanExtension_Test.cpp  SpielmanMersenneMT_Test.cpp  SpielmanMersenne_Test.cpp  SpielmanMontgomeryMT_Test.cpp  SpielmanMontgomeryVerif_Test.cpp  SpielmanMontgomery_Test.cpp
tv/: bd_spielman_extension_N12_in.txt  bd_spielman_extension_N12_out.txt  bd_spielman_extension_N14_in.txt  bd_spielman_extension_N14_out.txt  bd_spielman_extension_N16_in.txt  bd_spielman_extension_N16_out.txt  bd_spielman_mersenne_N12_in.txt  bd_spielman_mersenne_N12_out.txt  bd_spielman_mersenne_N16_in.txt  bd_spielman_mersenne_N16_out.txt  bd_spielman_montgomery_N12_in.txt  bd_spielman_montgomery_N12_out.txt  bd_spielman_montgomery_N14_in.txt  bd_spielman_montgomery_N16_in.txt  bd_spielman_montgomery_N16_out.txt  spielman_extension_N12_in.txt  spielman_extension_N12_out.txt  spielman_extension_N16_in.txt  spielman_extension_N16_out.txt  spielman_mersenne_N12_in.txt  spielman_mersenne_N12_out.txt  spielman_mersenne_N14_in.txt  spielman_mersenne_N14_out.txt  spielman_mersenne_N16_in.txt  spielman_mersenne_N16_out.txt  spielman_montgomery_N12_in.txt  spielman_montgomery_N12_out.txt  spielman_montgomery_N14_out.txt  spielman_montgomery_N16_in.txt  spielman_montgomery_N16_out.txt
utils/: utils.h
